--- a/README.rdoc
+++ b/README.rdoc
@@ -1,27 +1,12 @@
 == README
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+Requirements:
 
-Things you may want to cover:
+* Ruby 2.3.3
 
-* Ruby version
+* Rails 4.2.7.1
 
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
+* PostgreSQL 9.6.3
 
 
 Please feel free to use a different markup language if you do not plan to run
